--- a/AAA/wenxuechuanbo.html
+++ b/AAA/wenxuechuanbo.html
@@ -799,7 +799,7 @@
     <div class="absolute inset-0 z-0" style="background-image: url('../AAA/images/wenhua/4.png'); background-size: cover; opacity: 0.8;"></div>
     
     <!-- 左侧白色内容区 -->
-    <div class="relative z-10 bg-white p-6 rounded-lg shadow-xl">
+    <div class="relative z-10 bg-white p-6 pb-36 rounded-lg shadow-xl">
         <!-- 标题部分 -->
         <div class="text-center mb-10 flex flex-col items-center">
             <div class="flex flex-col items-start mb-4 w-full max-w-1.1xl">
